rename project and add navigation and some placeholder screens

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,9 +73,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.userregistrationapp"
+    namespace "com.kullanicikayituygulamasi"
     defaultConfig {
-        applicationId "com.userregistrationapp"
+        applicationId "com.kullanicikayituygulamasi"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
