--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
         "android": "react-native run-android",
         "ios": "react-native run-ios",
         "lint": "eslint .",
-        "start": "react-native start",
+        "start": "react-native start --reset-cache",
         "test": "jest"
     },
     "dependencies": {
+        "@react-navigation/drawer": "^6.6.3",
         "@react-navigation/native": "^6.1.7",
         "@react-navigation/native-stack": "^6.9.13",
         "@react-navigation/stack": "^6.3.17",
         "react": "18.2.0",
         "react-native": "0.72.4",
         "react-native-gesture-handler": "^2.12.1",
+        "react-native-reanimated": "^3.5.2",
         "react-native-safe-area-context": "^4.7.2",
         "react-native-screens": "^3.25.0"
     },
