--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
         "test": "jest"
     },
     "dependencies": {
+        "@react-native-async-storage/async-storage": "^1.19.3",
         "@react-navigation/drawer": "^6.6.3",
         "@react-navigation/native": "^6.1.7",
         "@react-navigation/native-stack": "^6.9.13",
         "@react-navigation/stack": "^6.3.17",
+        "formik": "^2.4.5",
         "react": "18.2.0",
         "react-native": "0.72.4",
+        "react-native-chart-kit": "^6.12.0",
+        "react-native-document-picker": "^9.0.1",
         "react-native-gesture-handler": "^2.12.1",
+        "react-native-image-picker": "^7.0.0",
         "react-native-reanimated": "^3.5.2",
         "react-native-safe-area-context": "^4.7.2",
-        "react-native-screens": "^3.25.0"
+        "react-native-screens": "^3.25.0",
+        "react-native-table-component": "^1.2.2",
+        "yup": "^1.2.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
